Fix macOS DMG upload path and update to Java 25